--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@ ol {
 /* --- 2. Estilos Globais e Variáveis --- */
 :root {
     /* Cores do Gradiente - ATUALIZADAS */
-    --gradient-start-color: #FF0004;
+    --gradient-start-color: red;
     /* Vermelho vibrante */
-    --gradient-end-color: #FF5456;
+    --gradient-end-color: #ff4d35;
     /* Rosa claro */
 
     /* Variáveis para cores gerais */
-    --primary-color-fallback: #FF0004;
+    --primary-color-fallback: #ff0004;
     /* Cor sólida de fallback: Vermelho puro */
     --secondary-color: #6c757d;
     --text-color-light: #f0f0f0;
@@ -56,7 +56,7 @@ ol {
     /* Altura fixa para o header */
 
     /* Variável para o Gradiente Linear - ATUALIZADA */
-    --primary-gradient: linear-gradient(90deg, var(--gradient-start-color) 0%, var(--gradient-end-color) 45%);
+    --primary-gradient: linear-gradient(90deg, var(--gradient-start-color) 0%, var(--gradient-end-color) 60%);
 }
 
 html {
@@ -613,7 +613,7 @@ h6 {
        e ocupe o espaço disponível igualmente. Isso deve permitir 3 vídeos por linha
        dentro de 1000px de largura (1000px / 3 = ~333px por vídeo). */
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 10px;
+    gap: 15px;
     /* Espaçamento entre os vídeos menores */
     max-width: 900px;
     /* Alinha com a largura máxima do vídeo principal */
@@ -872,12 +872,6 @@ h6 {
     z-index: 1;
 }
 
-.bg_newsletter {
-    position: absolute;
-    max-width: 100vh;
-    max-height: 100vh;
-    background: url('/img/bg_newsletter_png.png') no-repeat center center/cover;
-}
 
 
 .email-input {
@@ -1215,10 +1209,7 @@ h6 {
         /* Cor clara para o X */
     }
 
-    .hero-title {
-        font-size: clamp(1.0em, 7vw, 3.8em);
-        /* Ajuste para mobile */
-    }
+
 
 
     .hero-content {
@@ -1371,11 +1362,6 @@ h6 {
     .video-grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        gap: 10px;
-        /* Ajusta as colunas para os vídeos menores.
-       minmax(250px, 1fr) permite que cada vídeo tenha no mínimo 250px
-       e ocupe o espaço disponível igualmente. Isso deve permitir 3 vídeos por linha
-       dentro de 1000px de largura (1000px / 3 = ~333px por vídeo). */
         grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
 
     }
