--- a/style.css
+++ b/style.css
@@ -152,7 +152,8 @@ h6 {
 }
 
 .hero-subtitle {
-    font-size: 1.5em;
+    padding: 0  150px;
+    font-size: 1.3em;
     line-height: 1.5;
     margin-bottom: 40px;
     max-width: auto;
@@ -160,7 +161,6 @@ h6 {
     margin-right: auto;
     font-weight: 200;
     color: var(--text-color-light);
-
 }
 
 .hero-section {
@@ -1168,8 +1168,11 @@ h6 {
 .navbar {
     padding: 0 10px 0 10px;
 }
-}
 
+.hero-subtitle {
+    padding: 0;
+}
+}
 
 @media (max-width: 1023px) {
 
@@ -1516,6 +1519,9 @@ h6 {
 
 @media (max-width: 700px) {
 
+.hero-subtitle {
+    font-size: 1em;
+}
 
     .about-section,
     .presenters-section,
